overflow added; opacity fixed

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2209,6 +2209,11 @@ video {
   border-color: rgb(30 64 175 / var(--tw-border-opacity));
 }
 
+.border-red-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(127 29 29 / var(--tw-border-opacity));
+}
+
 .border-x-transparent {
   border-left-color: transparent;
   border-right-color: transparent;
@@ -2508,6 +2513,26 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-\[opacity\] {
+  background-color: opacity;
+}
+
+.bg-\[opacity-\] {
+  background-color: opacity-;
+}
+
+.bg-\[opacity-90\] {
+  background-color: opacity-90;
+}
+
+.bg-opacity-90 {
+  --tw-bg-opacity: 0.9;
 }
 
 .bg-gradient-to-b {
